<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <!-- Tiêu đề -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dakrun"
        android:textColor="@color/purple"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Phụ đề -->
    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/h_th_ng_n_xe_tr_c_tuy_n_c_ng_daksystem"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Nút "Kết nối" và Trạng thái kết nối -->
    <Button
        android:id="@+id/btnConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:backgroundTint="@color/yellow"
        android:textColor="@color/dark_blue"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unknownn"
        android:textColor="@color/white"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="@id/btnConnect"
        app:layout_constraintStart_toEndOf="@id/btnConnect"
        android:layout_marginStart="8dp" />

    <!-- Nhập mã xe -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/btnConnect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/btnCreateCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_o_m_xe"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:backgroundTint="@color/blue"
                android:layout_marginEnd="8dp" />


            <EditText
                android:id="@+id/etInputCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:minHeight="48dp"
                android:hint="@string/nh_p_m"
                android:backgroundTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_light"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t_m_ki_m"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/dark_blue"
                app:layout_constraintTop_toTopOf="@id/cardInput"
                app:layout_constraintStart_toEndOf="@id/etInputCode"
                app:layout_constraintBottom_toBottomOf="@id/cardInput"  />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Google Maps Fragment -->
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cardInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
